--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             width: 25px;
         }
 
+        button{
+            margin: 1em auto;
+        }
+
     </style>
 </head>
 <body>
@@ -45,20 +49,8 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>2</td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-
-    <tr class="row">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>4</td>
         <td></td>
         <td></td>
         <td></td>
@@ -84,7 +76,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>6</td>
+        <td></td>
         <td></td>
     </tr>
 
@@ -113,7 +105,19 @@
     </tr>
 
     <tr class="row">
-        <td>1</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+
+    <tr class="row">
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -140,7 +144,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>9</td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -148,27 +152,190 @@
         <td></td>
     </tr>
 </table>
+<button id="btn">Solve</button>
 </body>
 <script>
-    window.onload = function(){
-        var grid = [];
-        setValues(grid);
-    };
+    window.onload = function() {
+        var grid = [
+            [5, 3, 0, 0, 7, 0, 0, 0, 0],
+            [6, 0, 0, 1, 9, 5, 0, 0, 0],
+            [0, 9, 8, 0, 0, 0, 0, 6, 0],
+            [8, 0, 0, 0, 6, 0, 0, 0, 3],
+            [4, 0, 0, 8, 0, 3, 0, 0, 1],
+            [7, 0, 0, 0, 2, 0, 0, 0, 6],
+            [0, 6, 0, 0, 0, 0, 2, 8, 0],
+            [0, 0, 0, 4, 1, 9, 0, 0, 5],
+            [0, 0, 0, 0, 8, 0, 0, 7, 9]
+        ];
 
-    function setValues(grid){
-        var obj = document.getElementsByTagName('td');
-        var inputValue;
-        for(var prop in obj){
-            if(obj[prop].innerHTML == ''){
-                obj[prop].innerHTML += '<input id="value" type="text" value="'+ obj[prop].innerHTML+'" />'
-            }
-        }
-        for(var i =0; i < 9; i++){
-            for(var j =0; j < 9; j++){
-               grid[i][j] = '';
-            }
+        var newgrid;
+        setInputBox();
+        document.getElementById('btn').onclick = function () {
 
+            populateSudokuBoard(grid);
+            solveSudoku(grid);
+            populateSudokuBoard(grid);
+        };
+//            grid = getValue();
+//            console.log(grid);
+//            for(var i = 0; i < 9; i++){
+//                for(var j = 0; j < 9; j++){
+//                    console.log('print');
+//                    if(checkValidity(grid,i,j) === false){
+//                        console.log('Invalid');
+//                        return;
+//                    }
+//                }
+//            }
+//            console.log('valid');
+//        }
+  };
+
+    function setInputBox(){
+        var inputElements = document.getElementsByTagName('td');
+        for(var prop in inputElements){
+            if(inputElements[prop].innerHTML = " "){
+                inputElements[prop].innerHTML += '<input class="cells" type="number" min="1" max="9"/>';
+            }
         }
     }
+
+    var validSubRegion = function(grid,row, col,value){
+        var valid = true;
+        var size = 3;
+        var topLeft = Math.floor(row/3);
+        var colLeft = Math.floor(col/3);
+
+        for(var i = 0; i < size; i++){
+            for(var j = 0; j < size; j++){
+                var currRow = size * topLeft + i;
+                var currCol = size * colLeft + j;
+                if(grid[currRow][currCol] == value){
+                    valid = false
+                }
+            }
+        }
+
+        return valid;
+    };
+
+    var validRow = function(grid,row, col, value){
+        var valid = true;
+        for(var i = 0; i < 9; i++){
+            if(grid[row][i] == value){
+                valid = false;
+            }
+        }
+        return valid;
+    };
+
+    var validColumn = function(grid, row, col, value){
+        var valid = true;
+        for(var i = 0; i < 9; i++){
+            if(grid[i][col] == value){
+                valid = false;
+            }
+        }
+
+        return valid;
+    };
+
+    var checkValidity = function(grid,row,col, value){
+        return validSubRegion(grid,row,col, value) && validColumn(grid,row,col, value) && validRow(grid,row,col, value);
+    };
+
+    var populateSudokuBoard = function(grid){
+       var elements = document.getElementsByClassName('cells');
+       var flattened = grid.reduce(function(a,b){
+           return a.concat(b);
+       });
+
+       for(var i = 0; i < flattened.length; i++){
+           elements[i].value = flattened[i];
+       }
+
+      return grid;
+    };
+
+    var findEmptyPositions = function(grid){
+        var emptyArray = [];
+
+        for(var i = 0; i < 9; i++){
+            for(var j =0; j < 9; j++){
+                if(grid[i][j] == 0){
+                    emptyArray.push([i,j]);
+                }
+            }
+        }
+        return emptyArray;
+    };
+
+    var solveSudoku = function(grid){
+        var emptyPosition = findEmptyPositions(grid);
+        var row,
+            col,
+            done,
+            value;
+
+        for(var i = 0; i < emptyPosition.length;){
+            row = emptyPosition[i][0];
+            col = emptyPosition[i][1];
+            value = grid[row][col] + 1;
+            done = false;
+
+            while(!done && value < 10){
+                if(checkValidity(grid,row,col,value)){
+                    done = true;
+                    grid[row][col] = value;
+                    i++;
+                }
+                else{
+                    //grid[row][col] = 0;
+                    value++;
+                }
+            }
+
+            if(!done){
+                grid[row][col]= 0;
+                i--;
+            }
+
+        }
+
+      console.log(grid);
+      return grid;
+    };
+
+
+    var getValue = function(){
+    var inputElements = document.getElementsByClassName('cells');
+
+//    for(var i =0; i < inputElements.length; i++){
+//        console.log(inputElements[i].value);
+//    }
+
+    var sudokuCellsArray = new Array(9);//[[][][][][][][][][]]
+
+    for(var i = 0; i < 9; i++) {
+        sudokuCellsArray[i] = new Array(9);
+    }
+
+    var k = 0
+    for( i = 0; i < 9; i++){
+        for(var j = 0; j < 9; j++){
+            sudokuCellsArray[i][j] = inputElements[j + k].value
+        }
+        k += 9;
+    }
+
+    // i = 0 , j = 0-8
+    // i = 1,
+    return sudokuCellsArray;
+}
+
+
+
+
+
 </script>
 </html>
