--- a/index.html
+++ b/index.html
@@ -3,44 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <style>
-        table{
-            margin: 1em auto;
-        }
-
-        tr:first-child{
-            border-top:solid;
-        }
-
-        tr:nth-child(3n) td{
-            border-bottom: solid;
-        }
-
-        td{
-            height: 25px;
-            width: 25px;
-            border: 1px solid;
-            text-align: center;
-        }
-
-        td:first-child{
-            border-left: solid;
-        }
-
-        td:nth-child(3n){
-            border-right: solid;
-        }
-
-        td input{
-            height: 25px;
-            width: 25px;
-        }
-
-        button{
-            margin: 1em auto;
-        }
-
-    </style>
+    <link rel="stylesheet" type='text/css' href="css/sudoku.css"/>
 </head>
 <body>
 <table id="grid">
@@ -309,18 +272,13 @@
 
     var getValue = function(){
     var inputElements = document.getElementsByClassName('cells');
-
-//    for(var i =0; i < inputElements.length; i++){
-//        console.log(inputElements[i].value);
-//    }
-
     var sudokuCellsArray = new Array(9);//[[][][][][][][][][]]
 
     for(var i = 0; i < 9; i++) {
         sudokuCellsArray[i] = new Array(9);
     }
 
-    var k = 0
+    var k = 0;
     for( i = 0; i < 9; i++){
         for(var j = 0; j < 9; j++){
             sudokuCellsArray[i][j] = inputElements[j + k].value
@@ -328,8 +286,6 @@
         k += 9;
     }
 
-    // i = 0 , j = 0-8
-    // i = 1,
     return sudokuCellsArray;
 }
 
