--- a/index.html
+++ b/index.html
@@ -115,183 +115,20 @@
         <td></td>
     </tr>
 </table>
-<button id="btn">Solve</button>
+<button id="btn">Initialize Board</button>
+<button id="btn2">Solve</button>
 </body>
-<script>
-    window.onload = function() {
-        var grid = [
-            [5, 3, 0, 0, 7, 0, 0, 0, 0],
-            [6, 0, 0, 1, 9, 5, 0, 0, 0],
-            [0, 9, 8, 0, 0, 0, 0, 6, 0],
-            [8, 0, 0, 0, 6, 0, 0, 0, 3],
-            [4, 0, 0, 8, 0, 3, 0, 0, 1],
-            [7, 0, 0, 0, 2, 0, 0, 0, 6],
-            [0, 6, 0, 0, 0, 0, 2, 8, 0],
-            [0, 0, 0, 4, 1, 9, 0, 0, 5],
-            [0, 0, 0, 0, 8, 0, 0, 7, 9]
-        ];
+<script src="node_modules/requirejs/require.js"></script>
 
-        var newgrid;
-        setInputBox();
-        document.getElementById('btn').onclick = function () {
+<script src="js/setInputBox.js"></script>
+<script src="js/populateSudokuBoard.js"></script>
+<script src="js/findEmptyPositions.js"></script>
+<script src="js/gridObject.js"></script>
+<script src="js/validSubRegion.js"></script>
+<script src="js/validColumn.js"></script>
+<script src="js/validRow.js"></script>
+<script src="js/checkValidity.js"></script>
+<script src="js/solveSudoku.js"></script>
+<script src="js/solve.js"></script>
 
-            populateSudokuBoard(grid);
-            solveSudoku(grid);
-            populateSudokuBoard(grid);
-        };
-//            grid = getValue();
-//            console.log(grid);
-//            for(var i = 0; i < 9; i++){
-//                for(var j = 0; j < 9; j++){
-//                    console.log('print');
-//                    if(checkValidity(grid,i,j) === false){
-//                        console.log('Invalid');
-//                        return;
-//                    }
-//                }
-//            }
-//            console.log('valid');
-//        }
-  };
-
-    function setInputBox(){
-        var inputElements = document.getElementsByTagName('td');
-        for(var prop in inputElements){
-            if(inputElements[prop].innerHTML = " "){
-                inputElements[prop].innerHTML += '<input class="cells" type="number" min="1" max="9"/>';
-            }
-        }
-    }
-
-    var validSubRegion = function(grid,row, col,value){
-        var valid = true;
-        var size = 3;
-        var topLeft = Math.floor(row/3);
-        var colLeft = Math.floor(col/3);
-
-        for(var i = 0; i < size; i++){
-            for(var j = 0; j < size; j++){
-                var currRow = size * topLeft + i;
-                var currCol = size * colLeft + j;
-                if(grid[currRow][currCol] == value){
-                    valid = false
-                }
-            }
-        }
-
-        return valid;
-    };
-
-    var validRow = function(grid,row, col, value){
-        var valid = true;
-        for(var i = 0; i < 9; i++){
-            if(grid[row][i] == value){
-                valid = false;
-            }
-        }
-        return valid;
-    };
-
-    var validColumn = function(grid, row, col, value){
-        var valid = true;
-        for(var i = 0; i < 9; i++){
-            if(grid[i][col] == value){
-                valid = false;
-            }
-        }
-
-        return valid;
-    };
-
-    var checkValidity = function(grid,row,col, value){
-        return validSubRegion(grid,row,col, value) && validColumn(grid,row,col, value) && validRow(grid,row,col, value);
-    };
-
-    var populateSudokuBoard = function(grid){
-       var elements = document.getElementsByClassName('cells');
-       var flattened = grid.reduce(function(a,b){
-           return a.concat(b);
-       });
-
-       for(var i = 0; i < flattened.length; i++){
-           elements[i].value = flattened[i];
-       }
-
-      return grid;
-    };
-
-    var findEmptyPositions = function(grid){
-        var emptyArray = [];
-
-        for(var i = 0; i < 9; i++){
-            for(var j =0; j < 9; j++){
-                if(grid[i][j] == 0){
-                    emptyArray.push([i,j]);
-                }
-            }
-        }
-        return emptyArray;
-    };
-
-    var solveSudoku = function(grid){
-        var emptyPosition = findEmptyPositions(grid);
-        var row,
-            col,
-            done,
-            value;
-
-        for(var i = 0; i < emptyPosition.length;){
-            row = emptyPosition[i][0];
-            col = emptyPosition[i][1];
-            value = grid[row][col] + 1;
-            done = false;
-
-            while(!done && value < 10){
-                if(checkValidity(grid,row,col,value)){
-                    done = true;
-                    grid[row][col] = value;
-                    i++;
-                }
-                else{
-                    //grid[row][col] = 0;
-                    value++;
-                }
-            }
-
-            if(!done){
-                grid[row][col]= 0;
-                i--;
-            }
-
-        }
-
-      console.log(grid);
-      return grid;
-    };
-
-
-    var getValue = function(){
-    var inputElements = document.getElementsByClassName('cells');
-    var sudokuCellsArray = new Array(9);//[[][][][][][][][][]]
-
-    for(var i = 0; i < 9; i++) {
-        sudokuCellsArray[i] = new Array(9);
-    }
-
-    var k = 0;
-    for( i = 0; i < 9; i++){
-        for(var j = 0; j < 9; j++){
-            sudokuCellsArray[i][j] = inputElements[j + k].value
-        }
-        k += 9;
-    }
-
-    return sudokuCellsArray;
-}
-
-
-
-
-
-</script>
 </html>
