added wrapper to button

--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@
         <td></td>
     </tr>
 </table>
-<button id="btn">Initialize Board</button>
-<button id="btn2">Solve</button>
+<div>
+    <button id="btn">Initialize Board</button>
+    <button id="btn2">Solve</button>
+</div>
+
 </body>
 <script src="node_modules/requirejs/require.js"></script>
 
