working on rquirejs

--- a/index.html
+++ b/index.html
@@ -119,19 +119,17 @@
     <button id="btn">Initialize Board</button>
     <button id="btn2">Solve</button>
 </div>
-
+<script data-min="node_modules/requirejs/js/main" src="node_modules/requirejs/require.js"></script>
 </body>
-<script src="node_modules/requirejs/require.js"></script>
-
-<script src="js/setInputBox.js"></script>
-<script src="js/populateSudokuBoard.js"></script>
-<script src="js/findEmptyPositions.js"></script>
-<script src="js/gridObject.js"></script>
-<script src="js/validSubRegion.js"></script>
-<script src="js/validColumn.js"></script>
-<script src="js/validRow.js"></script>
-<script src="js/checkValidity.js"></script>
-<script src="js/solveSudoku.js"></script>
-<script src="js/solve.js"></script>
+<!--<script src="node_modules/requirejs/js/setInputBox.js"></script>-->
+<!--<script src="node_modules/requirejs/js/populateSudokuBoard.js"></script>-->
+<!--<script src="node_modules/requirejs/js/findEmptyPositions.js"></script>-->
+<!--<script src="node_modules/requirejs/js/gridObject.js"></script>-->
+<!--<script src="node_modules/requirejs/js/validSubRegion.js"></script>-->
+<!--<script src="node_modules/requirejs/js/validColumn.js"></script>-->
+<!--<script src="node_modules/requirejs/js/validRow.js"></script>-->
+<!--<script src="node_modules/requirejs/js/checkValidity.js"></script>-->
+<!--<script src="node_modules/requirejs/js/solveSudoku.js"></script>-->
+<!--<script src="node_modules/requirejs/js/solve.js"></script>-->
 
 </html>
