--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <button id="btn">Initialize Board</button>
     <button id="btn2">Solve</button>
 </div>
-<script data-min="node_modules/requirejs/js/main" src="node_modules/requirejs/require.js"></script>
+<script data-main="node_modules/requirejs/js/main" src="node_modules/requirejs/require.js"></script>
 </body>
 <!--<script src="node_modules/requirejs/js/setInputBox.js"></script>-->
 <!--<script src="node_modules/requirejs/js/populateSudokuBoard.js"></script>-->
